# fortran_amg_omp_ocl

./: .gitmodules  CMakeLists.txt  LICENSE.md  README.md  amgcl.F90  amgcl.cpp  amgcl.h  dll.def  poisson.F90
